# predoc-practice

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  research.md
ad_hoc_practice/: drill_0102.ipynb  drill_01172026.ipynb  drill_0127_airbnb.ipynb  drill_1128.ipynb  drill_1204.ipynb  drill_1218.ipynb  playground.ipynb
documents/: amazon.md  paper_review.md  predoc_strategy_2026.md  strategy_updated.md
documents/papers/: _template.md  acemoglu-1998_directed-technical-change.md  arrow-1962_innovation-resource-allocation.md  arrow-1963_normative-medical-care.md  athey-2015_causal-forest.md  athey-2019_causal-vs-ml.md  callaway-santanna-2020_staggered-did.md  card-1999_returns-to-education.md  dix-2025_combining-complements.md  grossman-1972_health-capital.md  sadoff-2024_college-summer-school.md  spence-1973_signaling-via-education.md
practice/: README.md  template.ipynb
practice/task_01_cps_exploration/: instructions.md  task.ipynb
practice/task_02_wage_regression/: instructions.md  task.ipynb
practice/task_03_panel_did/: instructions.md  task.ipynb
practice/task_04_merge_and_visualize/: instructions.md  task.ipynb
practice/task_05_event_study/: instructions.md  task.ipynb
practice/task_06_full_simulation/: instructions.md  task.ipynb
predoc_data_task/task_1/: datatask1_notebook.ipynb
predoc_data_task/task_1/instructions/: Time series questions.docx  exploration_questions.R  (+2 more)
predoc_data_task/task_2/: datatask2.ipynb
predoc_data_task/task_3/: _audit_runner.py  _qmd_to_ipynb.py  analysis.html  analysis.ipynb  analysis.qmd
(+3 files in other folders)
